[Merton] Branding and accessibility fixes to comply with style guide
- added privacy policy link
- relayed footer links, left-align locatino search box, drop header border
- prevented homepage input focus outline being cut off
- focus outlines for multi-selects and dropzones
- made input.fake-link buttons look like <a> links again
- fixed All Reports:
  - shortlist stars returned to original styling
  - <small> text link underlining has been removed

--- a/web/cobrands/merton/layout.scss
+++ b/web/cobrands/merton/layout.scss
@@ -19,8 +19,17 @@
 }
 
 #front-main {
+    text-align: left;
     padding: 3em 1em;
     background: #ffffff;
+
+    #postcodeForm {
+        overflow: visible;
+    }
+}
+
+@media screen and (min-width: 48em) {
+    #front-main #postcodeForm div { margin-left: 0;}
 }
 
 #front_stats big {
